[package]
authors = ["louisfd <louisfd94@gmail.com>", "Nathaniel Simard"]
categories = ["science"]
description = "Compute crate that helps creating high performance async backends."
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "data"]
license.workspace = true
name = "burn-compute"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/burn-compute"
version.workspace = true

[features]
default = [
    "std",
    "channel-mutex",
    "channel-mpsc",
    "channel-cell",
    "storage-bytes",
]
std = ["burn-common/std"]
channel-mutex = []
channel-cell = []
channel-mpsc = [] # Assume std
storage-bytes = []

[dependencies]
burn-common = { path = "../burn-common", version = "0.12.0", default-features = false }
derive-new = { workspace = true }
spin = { workspace = true }
log = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
serial_test = "2.0.0"
