[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = """
This library provides an easy to use dataset API with many manipulations
to easily create your ML data pipeline.
"""
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT"
name = "burn-dataset"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-dataset"
version = "0.8.0"

[features]
default = [
  "fake",
]

audio = [
  "hound",
]

fake = ["dep:fake"]

[dependencies]
csv = {workspace = true}
derive-new = {workspace = true}
dirs = {workspace = true}
fake = {workspace = true, optional = true}
hound = {version = "3.4.0", optional = true}
image = {version = "0.24.6", features = ["png"]}
r2d2 = {workspace = true}
r2d2_sqlite = {workspace = true}
rand = {workspace = true, features = ["std"]}
rusqlite = {workspace = true}
sanitize-filename = {workspace = true}
serde = {workspace = true, features = ["std", "derive"]}
serde_json = {workspace = true, features = ["std"]}
serde_rusqlite = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
thiserror = {workspace = true}
rmp-serde = {workspace = true}
tempfile = {workspace = true}

[dev-dependencies]
rayon = {workspace = true}
rstest = {workspace = true}
