[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Library with simple dataset APIs for creating ML data pipelines"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT OR Apache-2.0"
name = "burn-dataset"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-dataset"
version = "0.9.0"

[features]
default = [
  "fake",
]

audio = [
  "hound",
]

fake = ["dep:fake"]

[dependencies]
csv = {workspace = true}
derive-new = {workspace = true}
dirs = {workspace = true}
fake = {workspace = true, optional = true}
gix-tempfile = {workspace = true}
hound = {version = "3.5.0", optional = true}
image = {version = "0.24.6", features = ["png"]}
r2d2 = {workspace = true}
r2d2_sqlite = {workspace = true}
rand = {workspace = true, features = ["std"]}
rmp-serde = {workspace = true}
rusqlite = {workspace = true}
sanitize-filename = {workspace = true}
serde = {workspace = true, features = ["std", "derive"]}
serde_json = {workspace = true, features = ["std"]}
serde_rusqlite = {workspace = true}
strum = {workspace = true}
strum_macros = {workspace = true}
tempfile = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
rayon = {workspace = true}
rstest = {workspace = true}
