[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Library with simple dataset APIs for creating ML data pipelines"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT OR Apache-2.0"
name = "burn-dataset"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-dataset"
version = "0.10.0"

[features]
default = ["sqlite-bundled"]

audio = [
  "hound",
]

fake = ["dep:fake"]

sqlite = ["__sqlite-shared", "dep:rusqlite"]
sqlite-bundled = ["__sqlite-shared", "rusqlite/bundled"]

# internal
__sqlite-shared = ["dep:r2d2", "dep:r2d2_sqlite", "dep:serde_rusqlite", "dep:image"]

[dependencies]
csv = {workspace = true}
derive-new = {workspace = true}
dirs = {workspace = true}
fake = {workspace = true, optional = true}
gix-tempfile = {workspace = true}
hound = {version = "3.5.0", optional = true}
image = {version = "0.24.6", features = ["png"], optional = true}
r2d2 = {workspace = true, optional = true}
r2d2_sqlite = {workspace = true, optional = true}
rand = {workspace = true, features = ["std"]}
rmp-serde = {workspace = true}
rusqlite = {workspace = true, optional = true}
sanitize-filename = {workspace = true}
serde = {workspace = true, features = ["std", "derive"]}
serde_json = {workspace = true, features = ["std"]}
serde_rusqlite = {workspace = true, optional = true}
strum = {workspace = true}
strum_macros = {workspace = true}
tempfile = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
rayon = {workspace = true}
rstest = {workspace = true}
fake = {workspace = true}
