[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = """
Burn derive crate.
"""
edition = "2021"
keywords = []
license = "MIT/Apache-2.0"
name = "burn-derive"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-derive"
version = "0.8.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2  = {workspace = true}
quote = {workspace = true}
# syn = {workspace = true}
syn = "1.0.76" # TODO upgrade to 2.0
