[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Derive crate for the Burn framework"
edition = "2021"
keywords = []
license = "MIT OR Apache-2.0"
name = "burn-derive"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-derive"
version = "0.9.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}
