[package]
authors = [
    "Dilshod Tadjibaev (@antimora)",
    "Nathaniel Simard (@nathanielsimard)",
]
description = "Library for importing datamodels into the Burn framework"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "burn-import"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn/tree/main/burn-import"
version = "0.11.0"

default-run = "onnx2burn"

[features]
default = ["onnx", "pytorch"]
onnx = []
pytorch = ["candle-core", "clap", "regex", "num-traits", "lazy_static"]

[dependencies]
burn = { path = "../burn", version = "0.11.0" }
burn-ndarray = { path = "../burn-ndarray", version = "0.11.0" }

anyhow = { version = "1.0.75" }
bytemuck = { workspace = true }
derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
proc-macro2 = { workspace = true }
protobuf = { version = "3.3", features = ["with-bytes"] }
quote = { workspace = true }
rust-format = { version = "0.3", features = ["token_stream", "post_process"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true }
strum_macros = { workspace = true }
syn = { workspace = true, features = ["parsing"] }
tracing-subscriber = { workspace = true }
tracing-core = { workspace = true }
thiserror = { workspace = true }

candle-core = { workspace = true, optional = true }
clap = { version = "4.4.11", features = ["derive"], optional = true }
regex = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }

[build-dependencies]
protobuf-codegen = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
