[package]
authors = [
    "Dilshod Tadjibaev (@antimora)",
    "Nathaniel Simard (@nathanielsimard)",
]
description = "Library for importing datamodels into the Burn framework"
edition.workspace = true
license.workspace = true
name = "burn-import"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/burn-import"
version.workspace = true

default-run = "onnx2burn"

[features]
default = ["onnx", "pytorch"]
onnx = []
pytorch = ["candle-core", "clap", "regex", "num-traits", "lazy_static"]

[dependencies]
burn = { path = "../burn", version = "0.12.0" }
burn-ndarray = { path = "../burn-ndarray", version = "0.12.0" }

anyhow = { version = "1.0.75" }
bytemuck = { workspace = true }
derive-new = { workspace = true }
half = { workspace = true }
log = { workspace = true }
proc-macro2 = { workspace = true }
protobuf = { version = "3.3", features = ["with-bytes"] }
quote = { workspace = true }
rust-format = { version = "0.3", features = ["token_stream", "post_process"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
strum = { workspace = true }
strum_macros = { workspace = true }
syn = { workspace = true, features = ["parsing"] }
tracing-subscriber.workspace = true
tracing-core.workspace = true

[build-dependencies]
protobuf-codegen = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
