[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "NdArray backend for burn"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT/Apache-2.0"
name = "burn-ndarray"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-ndarray"
version = "0.5.0"

[features]
default = ["std"]

std = [
  "rand/std",
  "burn-tensor/std",
  "burn-common/std",
  "burn-autodiff",
  "ndarray/std",
  "ndarray/rayon",
  "ndarray/matrixmultiply-threading",
]

blas-accelerate = ["ndarray/blas", "blas-src/accelerate"] # Accelerate framework (macOS only)
blas-netlib = ["ndarray/blas", "blas-src/netlib"]
blas-openblas = ["ndarray/blas", "blas-src/openblas", "openblas-src"]
blas-openblas-system = [
    "ndarray/blas",
    "blas-src/openblas",
    "openblas-src/system",
]

[dependencies]

# ** Please make sure all dependencies support no_std when std is disabled **

burn-autodiff = {path = "../burn-autodiff", features = ["export_tests"], optional = true}
burn-common = {path = "../burn-common", default-features = false}
burn-tensor = {path = "../burn-tensor", default-features = false, features = ["export_tests"]}

blas-src = {version = "0.8.0", default-features = false, optional = true}# no-std compatible         
derive-new = {workspace = true}
libm = {workspace = true}
ndarray = {workspace = true}
num-traits = {workspace = true}
openblas-src = {version = "0.10.8", optional = true}
rand = {workspace = true}
spin = {workspace = true}# using in place of use std::sync::Mutex;
