[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Ndarray backend for the Burn framework"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT OR Apache-2.0"
name = "burn-ndarray"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-ndarray"
version = "0.9.0"

[features]
default = ["std"]

std = [
  "rand/std",
  "burn-tensor/std",
  "burn-common/std",
  "burn-autodiff",
  "rayon",
  "ndarray/std",
  "ndarray/rayon",
  "matrixmultiply/std",
  "matrixmultiply/threading",
]

blas-accelerate = ["ndarray/blas", "blas-src/accelerate"] # Accelerate framework (macOS only)
blas-netlib = ["ndarray/blas", "blas-src/netlib"]
blas-openblas = ["ndarray/blas", "blas-src/openblas", "openblas-src"]
blas-openblas-system = [
  "ndarray/blas",
  "blas-src/openblas",
  "openblas-src/system",
]

[dependencies]

# ** Please make sure all dependencies support no_std when std is disabled **

burn-autodiff = {path = "../burn-autodiff", version = "0.9.0", features = ["export_tests"], optional = true}
burn-common = {path = "../burn-common", version = "0.9.0", default-features = false}
burn-tensor = {path = "../burn-tensor", version = "0.9.0", default-features = false, features = ["export_tests"]}

matrixmultiply = {version = "0.3.7", default-features = false}
rayon = {workspace = true, optional = true}

blas-src = {version = "0.9.0", default-features = false, optional = true}# no-std compatible         

derive-new = {workspace = true}
libm = {workspace = true}
ndarray = {workspace = true}
num-traits = {workspace = true}
openblas-src = {version = "0.10.8", optional = true}
rand = {workspace = true}
spin = {workspace = true}# using in place of use std::sync::Mutex;
