[package]
authors = [
  "nathanielsimard <nathaniel.simard.42@gmail.com>",
  "Dilshod Tadjibaev (@antimora)",
]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "burn-no-std-tests"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn/tree/main/burn-no-std-tests"
version = "0.11.1"

[dependencies]

# ** Please make sure all dependencies support no_std **

burn = { path = "../burn", version = "0.11.1", default-features = false }
burn-ndarray = { path = "../burn-ndarray", version = "0.11.1", default-features = false }

serde = { workspace = true }
