[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Tch backend for burn"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT/Apache-2.0"
name = "burn-tch"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-tch"
version = "0.7.0"

[features]
doc = ["tch/doc-only"]

[dependencies]
burn-tensor = {path = "../burn-tensor", version = "0.7.0"}
libc = "0.2.0"

half = {workspace = true, features = ["std"]}
rand = {workspace = true, features = ["std"]}

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
tch = {version = "0.11.0"}

# Temporary workaround for https://github.com/burn-rs/burn/issues/180
# Remove this and build.rs once tch-rs upgrades to Torch 2.0 at least
[target.'cfg(target_arch = "aarch64")'.dependencies]
tch = {version = "0.11.0", default-features = false} # Disables torch downloading

[dev-dependencies]
burn-autodiff = {path = "../burn-autodiff", version = "0.7.0", default-features = false, features = [
  "export_tests",
]}
burn-tensor = {path = "../burn-tensor", version = "0.7.0", default-features = false, features = [
  "export_tests",
]}
