[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Tch backend for the Burn framework"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT OR Apache-2.0"
name = "burn-tch"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-tch"
version = "0.9.0"

[features]
doc = ["tch/doc-only"]

[dependencies]
burn-tensor = {path = "../burn-tensor", version = "0.9.0" }

half = {workspace = true, features = ["std"]}
libc = "0.2.146"
rand = {workspace = true, features = ["std"]}
tch = {version = "0.13.0", features = ["download-libtorch"]}

[dev-dependencies]
burn-autodiff = {path = "../burn-autodiff", version = "0.9.0", default-features = false, features = [
  "export_tests",
]}
burn-tensor = {path = "../burn-tensor", version = "0.9.0", default-features = false, features = [
  "export_tests",
]}
