[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Tch backend for the Burn framework"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "data"]
license.workspace = true
name = "burn-tch"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/burn-tch"
version.workspace = true

[features]
default = []
doc = ["tch/doc-only"]

[dependencies]
burn-tensor = { path = "../burn-tensor", version = "0.12.0" }

half = { workspace = true, features = ["std"] }
libc = "0.2.150"
rand = { workspace = true, features = ["std"] }
tch = { version = "0.14.0", features = ["download-libtorch"] }

[dev-dependencies]
burn-autodiff = { path = "../burn-autodiff", version = "0.12.0", default-features = false, features = [
  "export_tests",
] }
burn-tensor = { path = "../burn-tensor", version = "0.12.0", default-features = false, features = [
  "export_tests",
] }
