[package]
name = "burn-tensor-testgen"
version = "0.5.0"
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]

description = "Burn tensor test gen crate."
repository = "https://github.com/burn-rs/burn/tree/main/burn-tensor-testgen"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "1.0.107"
quote = "1.0.23"
proc-macro2 = "1.0.49"
