[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
description = "Test generation crate for burn-tensor"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "burn-tensor-testgen"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-tensor-testgen"
version = "0.9.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}
