[package]
name = "burn-tensor"
version = "0.5.0"
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]

description = """
This library provides multiple tensor implementations hidden behind
an easy to use API that supports reverse mode automatic differentiation.
"""
repository = "https://github.com/burn-rs/burn/tree/main/burn-tensor"
readme = "README.md"
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
categories = ["science"]
license = "MIT/Apache-2.0"
edition = "2021"

[features]
default = ["std"]
std = [
    "rand/std"
]
export_tests = ["burn-tensor-testgen"]
experimental-named-tensor = []

[dependencies]
burn-tensor-testgen = { version = "0.5.0", path = "../burn-tensor-testgen", optional = true }
num-traits = {version = "0.2.15", default-features = false } # Default enables std
derive-new = {version = "0.5.9", default-features = false } # Default enables std

rand = {version = "0.8.5", default-features = false, features = ["std_rng"] } # Default enables std
rand_distr = {version = "0.4.3", default-features = false }  # use instead of statrs because it supports no_std
half = { version = "1.6.0", features = [
    "num-traits",
] } # needs to be 1.6 to work with tch

# The same implementation of HashMap in std but with no_std support (only needs alloc crate)
hashbrown = "0.13.2" # no_std compatible

# Serialization
serde = { version = "1.0.151", features = ["derive", "alloc"], default-features = false }

libm = "0.2.6" # no_std is supported by default

[dev-dependencies]
rand = {version = "0.8.5", features = ["std", "std_rng"] } # Default enables std

#  default-features = true
