[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "no-std", "embedded", "wasm"]
description = "Tensor library with user-friendly APIs and automatic differentiation support"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license = "MIT OR Apache-2.0"
name = "burn-tensor"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-tensor"
version = "0.9.0"

[features]
default = ["std"]
experimental-named-tensor = []
export_tests = ["burn-tensor-testgen"]
std = [
  "rand/std",
  "half/std",
]

[dependencies]
burn-tensor-testgen = {path = "../burn-tensor-testgen", version = "0.9.0", optional = true}

derive-new = {workspace = true}
half = {workspace = true}
libm = {workspace = true}# no_std is supported by default
num-traits = {workspace = true}
rand = {workspace = true}
rand_distr = {workspace = true}# use instead of statrs because it supports no_std

# The same implementation of HashMap in std but with no_std support (only needs alloc crate)
hashbrown = {workspace = true}# no_std compatible

# Serialization
serde = {workspace = true}

[dev-dependencies]
rand = {workspace = true, features = ["std", "std_rng"]}# Default enables std
