[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Training crate for the Burn framework"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license = "MIT OR Apache-2.0"
name = "burn-train"
readme = "README.md"
repository = "https://github.com/tracel-ai/burn/tree/main/burn-train"
version = "0.11.0"

[features]
default = ["metrics", "tui"]
metrics = ["nvml-wrapper", "sysinfo", "systemstat"]
tui = ["ratatui", "crossterm"]
browser = ["js-sys", "web-sys", "wasm-bindgen", "wasm-bindgen-rayon", "rayon"]

[dependencies]
burn-core = { path = "../burn-core", version = "0.11.0", default-features = false, features = [
  "std",
] }

log = { workspace = true }
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-core.workspace = true

# Metrics
nvml-wrapper = { version = "0.9.0", optional = true }
sysinfo = { version = "0.29.10", optional = true }
systemstat = { version = "0.2.3", optional = true }

# Text UI
ratatui = { version = "0.23", optional = true, features = ["all-widgets"] }
crossterm = { version = "0.27", optional = true }

# Utilities
derive-new = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }

js-sys = { version = "0.3.64", optional = true }
web-sys = { version = "0.3.64", optional = true, features = [
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "MessageEvent",
  "ErrorEvent",
] }
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-rayon = { version = "1.0.3", optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
burn-ndarray = { path = "../burn-ndarray", version = "0.11.0" }
