[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "Training crate for the Burn framework"
edition.workspace = true
keywords = ["deep-learning", "machine-learning", "tensor", "pytorch", "ndarray"]
license.workspace = true
name = "burn-train"
readme.workspace = true
repository = "https://github.com/tracel-ai/burn/tree/main/burn-train"
version.workspace = true

[features]
default = ["metrics", "tui"]
metrics = ["nvml-wrapper", "sysinfo", "systemstat"]
tui = ["ratatui", "crossterm"]

[dependencies]
burn-core = { path = "../burn-core", version = "0.12.0", features = ["dataset"] }

log = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tracing-core = { workspace = true }

# Metrics
nvml-wrapper = { version = "0.9.0", optional = true }
sysinfo = { version = "0.29.10", optional = true }
systemstat = { version = "0.2.3", optional = true }

# Text UI
ratatui = { version = "0.23", optional = true, features = ["all-widgets"] }
crossterm = { version = "0.27", optional = true }

# Utilities
derive-new = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }

[dev-dependencies]
burn-ndarray = { path = "../burn-ndarray", version = "0.12.0" }
