[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science"]
description = "WGPU backend for burn"
edition = "2021"
keywords = ["deep-learning", "machine-learning", "data"]
license = "MIT/Apache-2.0"
name = "burn-wgpu"
readme = "README.md"
repository = "https://github.com/burn-rs/burn/tree/main/burn-wgpu"
version = "0.8.0"

[features]
default = ["async"]
async = []

[dependencies]
burn-tensor = {path = "../burn-tensor", version = "0.8.0"}
burn-common = {path = "../burn-common", version = "0.8.0"}
derive-new = {workspace = true}
bytemuck = {workspace = true}
rand = {workspace = true}
num-traits = {workspace = true}
spin = {workspace = true}
log = {workspace = true}

# WGPU stuff
wgpu = {workspace = true}
futures-intrusive = {workspace = true}
pollster = {workspace = true}

[dev-dependencies]
burn-autodiff = {path = "../burn-autodiff", version = "0.8.0", default-features = false, features = [
  "export_tests",
]}
burn-tensor = {path = "../burn-tensor", version = "0.8.0", default-features = false, features = [
  "export_tests",
]}
